--- a/front-end-pages/admin-pages/admin-members-edit.css
+++ b/front-end-pages/admin-pages/admin-members-edit.css
@@ -55,7 +55,7 @@ input {
 }
 
 .mas-breadcrumb {
-    text-align: center;
+    text-align: left;
     margin-top: 20px;
     font-size: 18px;
     background-color: #F47B42;
