--- a/front-end-pages/admin-pages/classes-tab/admin-classes.css
+++ b/front-end-pages/admin-pages/classes-tab/admin-classes.css
@@ -1,7 +1,13 @@
+h3.mas {
+	background-color: #0085A7;
+	color: white;
+	text-align: center;
+	padding: 3px;
+}
+
 .mas-create{
 	background-color: #F47B42;
 	color: white;
 	margin: auto;
-	float: center;
 	display: inline-block;
 }
