override bootstrap styling

--- a/front-end-pages/admin-pages/classes-tab/admin-classes.css
+++ b/front-end-pages/admin-pages/classes-tab/admin-classes.css
@@ -11,3 +11,8 @@ h3.mas {
 	margin: auto;
 	display: inline-block;
 }
+
+.panel-info .panel-heading {
+	color: white !important;
+	background-color: #0085A7 !important;
+}
