Found the issue - active CSS

--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.css
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.css
@@ -18,7 +18,7 @@ img.mas {
     margin-bottom: 10px;
 }
 
-table.mas {
+/*table.mas {
     font-family: arial, sans-serif;
     color: #555;
     border: 0px;
@@ -93,3 +93,4 @@ a.mas {
 img.mas {
     height: 30%;
 }
+*/
