--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.css
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.css
@@ -83,14 +83,9 @@ input.mas {
     background-color: #F47B42 !important;
     color: white !important;
     padding: 3px;
-}
+}*/
 
 a.mas {
     color: white;
     text-decoration: none;
 }
-
-img.mas {
-    height: 30%;
-}
-*/
