--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.css
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.css
@@ -1,4 +1,4 @@
-img.mas {
+/*img.mas {
  height: 250px !important;
  margin-bottom: 10px;
 }
@@ -88,4 +88,4 @@ input.mas {
     background-color: #F47B42 !important;
     color: white !important;
     padding: 3px;
-}
+}*/
