panel for payment info

--- a/front-end-pages/member-page/member-page.css
+++ b/front-end-pages/member-page/member-page.css
@@ -17,3 +17,8 @@ img {
     padding: 10px;
     margin-bottom: 10px;
 }
+
+.panel-info .panel-heading {
+	color: white !important;
+	background-color: #0085A7 !important;
+}
