--- a/front-end-pages/member-page/member-page.css
+++ b/front-end-pages/member-page/member-page.css
@@ -14,7 +14,7 @@ img {
 	background-color: #0085A7;
 	color: white;
     font-weight: bold;
-    font-size: 14px;
+    font-size: 14px !important;
     padding: 10px;
     margin-bottom: 10px;
 }
